# dhanashree--backend/src/routes/request.route.ts
@@ -10,7 +10,19 @@ const router: IRouter = Router()
 router.post('/', catchAsync(requestController.create.bind(requestController)))
 router.get('/verify', catchAsync(requestController.verify.bind(requestController)))
 router.get('/', catchAsync(requestController.getAll.bind(requestController)))
-router.get('/:id', authentication(ROLE.ADMIN), catchAsync(requestController.getOne.bind(requestController)))
-router.patch('/:id', authentication(ROLE.ADMIN), catchAsync(requestController.update.bind(requestController)))
+router.post(
+  '/resend',
+  catchAsync(requestController.resend.bind(requestController))
+)
+router.get(
+  '/:id',
+  authentication(ROLE.ADMIN),
+  catchAsync(requestController.getOne.bind(requestController))
+)
+router.patch(
+  '/:id',
+  authentication(ROLE.ADMIN),
+  catchAsync(requestController.update.bind(requestController))
+)
 
 export default router
